[tool.poetry]
name = "Python | CodeHub Discord Bot"
version = "1.2.1"
description = "A discord bot that lets you learn code!"
authors = ["MrPixelTick#0001, Hydra#4179"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
bs4 = "^0.0.1"
replit = "^3.2.4"
python-dotenv = "^0.19.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
